force-app/main/default/objects/Opportunity/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1,Jan)</fullName>
            </value>
            <value>
                <fullName>(2,feb)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>