force-app/main/default/objects/Opportunity/fields/dsddd__c.field-meta.xml
<CustomField>
    <fullName>dsddd__c</fullName>
    <label>dsddd</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sss</fullName>
            </value>
            <value>
                <fullName>aaaaa</fullName>
            </value>
            <value>
                <fullName>aaaaaaa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>