force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEP</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>Dental/Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>