force-app/main/default/objects/Opportunity/fields/ProfielValidation__c.field-meta.xml
<CustomField>
    <fullName>ProfielValidation__c</fullName>
    <formula>IF(AND(OwnerId != $User.Id, $Profile.Name !=&#39;System Adminstrator&#39;),1,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfielValidation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>