force-app/main/default/objects/Opportunity/fields/QLE_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>QLE_Event_Date__c</fullName>
    <label>QLE Event Date</label>
    <type>Date</type>
</CustomField>