force-app/main/default/objects/Opportunity/fields/QLE_Type__c.field-meta.xml
<CustomField>
    <fullName>QLE_Type__c</fullName>
    <label>QLE Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Lost Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>