force-app/main/default/objects/Opportunity/validationRules/asasasas.validationRule-meta.xml
<ValidationRule>
    <fullName>asasasas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( StageName , &#39;Qualification&#39;), $User.Id &lt;&gt;&#39;00540000000leyp&#39; )</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>